<resources>
    <string name="app_name">川音艺术考级</string>
    <string name="search_hint">搜索老师、机构、学校...</string>

    <string name="tab_home">首页</string>
    <string name="tab_sign_up">报名</string>
    <string name="tab_message">消息</string>
    <string name="tab_user">我的</string>
    <string name="sign_up">报名</string>
    <string name="text_class_type">考级科目：</string>
    <string name="text_method">考级方式：</string>
    <string name="sign_location">举办地址：</string>
    <string name="sign_method">报名方式：</string>
    <string name="edit_user_info">编辑资料</string>
    <string name="user_func_info">考生信息</string>
    <string name="user_func_exam">我的考试</string>
    <string name="user_func_order">报考订单</string>
    <string name="user_func_setting">设置中心</string>
    <string name="time_discount">剩余</string>
    <string name="time_close">自动关闭</string>
    <string name="pay_order">立即支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="major_name">报考专业</string>
    <string name="major_desc">院系介绍</string>
    <string name="under_sign_in">报名中</string>
    <string name="sign_up_page">报考</string>
    <string name="sign_up_step">操作流程:</string>
    <string name="step_1_title">1.请先完成身份认证，认证完成后才可报名</string>
    <string name="step_1_desc">*请准备身份证证件及个人一寸免冠照片</string>
    <string name="step_1_handle">去认证</string>
    <string name="step_2_title">2.完成认证后，即可去报名参加考试</string>
    <string name="step_2_desc">*注意记录考试时间，以免错过考试</string>
    <string name="step_2_handle">去报名</string>
    <string name="step_3_title">3.报名成功后，您可在此处看到考试入口</string>
    <string name="step_3_desc">*若报名后此处无考试入口，请去报名记录查看</string>
    <string name="step_3_handle">报名记录</string>
    <string name="step_bottom_notice">请及时认证，避免影响参与考试!</string>

    <string name="login_title">登录后继续操作</string>
    <string name="login_desc">新用户首次登录即视为注册</string>
    <string name="login_phone_hint">请输入手机号码</string>
    <string name="login_code_hint">请输入图形验证码</string>
    <string name="login_agree_info">我已阅读并同意</string>
    <string name="login_agree_private">《隐私政策》</string>
    <string name="login_agree_user">《用户协议》</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="phone_china_num">+86</string>
    <string name="input_phone_code">请输入手机验证码</string>
    <string name="input_phone_num">验证码已发送至+86</string>
    <string name="login">登录</string>
    <string name="title_post_id_card">上传身份认证</string>
    <string name="next_step">下一步</string>
    <string name="post_id_front">请上传身份证人像面</string>
    <string name="post_id_back">请上传身份证国徽面</string>
    <string name="title_input_user_info">填写身份信息</string>
</resources>