<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/globe_dimen_240">

    <ImageView
        android:id="@+id/head_icon"
        android:layout_width="@dimen/globe_dimen_148"
        android:layout_height="@dimen/globe_dimen_148"
        android:layout_marginStart="@dimen/globe_dimen_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/school_name"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/globe_dimen_14"
        android:textSize="@dimen/font_text_size_24"
        android:textColor="@color/color_52618B"
        tools:text="四川音乐学院"
        app:layout_constraintStart_toStartOf="@+id/head_icon"
        app:layout_constraintEnd_toEndOf="@+id/head_icon"
        app:layout_constraintTop_toBottomOf="@+id/head_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/head_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/globe_dimen_30"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/globe_dimen_6"
        android:textColor="@color/color_333333"
        tools:text="2023届夏季川音考级报名"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="@dimen/globe_dimen_40"
        android:layout_marginEnd="@dimen/globe_dimen_30"
        app:layout_constraintTop_toTopOf="@+id/head_icon"
        />

    <TextView
        android:id="@+id/sign_up_btn"
        android:layout_width="@dimen/globe_dimen_88"
        android:layout_height="@dimen/globe_dimen_46"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/globe_dimen_30"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textColor="@color/color_52618B"
        android:textStyle="bold"
        android:textSize="@dimen/font_text_size_24"
        android:background="@drawable/sign_up_bg"
        />

    <TextView
        android:id="@+id/class_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/globe_dimen_24"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textSize="@dimen/font_text_size_24"
        android:textColor="@color/color_999999"
        android:text="@string/text_class_type"
        />

    <TextView
        android:id="@+id/class_content_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/globe_dimen_24"
        app:layout_constraintStart_toEndOf="@+id/class_tv"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textSize="@dimen/font_text_size_24"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_btn"
        android:layout_marginEnd="@dimen/globe_dimen_36"
        android:maxLines="2"
        tools:text="中国舞，爵士舞，钢琴，吉他，声乐，二胡等..."
        android:ellipsize="end"
        android:textColor="@color/color_999999"
        android:text="@string/text_class_type"
        />

    <TextView
        android:id="@+id/method_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/globe_dimen_50"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/class_tv"
        android:textSize="@dimen/font_text_size_24"
        android:textColor="@color/color_999999"
        android:text="@string/text_method"
        />

    <TextView
        android:id="@+id/method_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/globe_dimen_50"
        app:layout_constraintStart_toEndOf="@+id/method_tv"
        app:layout_constraintTop_toBottomOf="@+id/class_tv"
        android:textSize="@dimen/font_text_size_24"
        android:textColor="@color/color_999999"
        tools:text="线上，线下"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/custom_line_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/color_F5F5F5"
        />


</androidx.constraintlayout.widget.ConstraintLayout>